# thermostat-qml

./: .gitignore  CMakeLists.txt  Main.qml  README.md  config.h  main.cpp  thermostatbackend.cpp  thermostatbackend.h  weatherservice.cpp  weatherservice.h
